# HA_CTRL

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
App/: CMakeLists.txt  app_FLASH.ld  app_linker.ld
App/Inc/: api_debug.hpp  api_gpio.hpp  app.hpp  app_it.hpp  app_main.hpp  cfg_gpio.hpp  circular_buffer.hpp  console.hpp  disp_gpio.hpp  ha_ctrl.hpp  hal_adc.hpp  hal_gpio.hpp  led_ctrl.hpp  mod_hal_gpio.hpp  patterns.hpp  uart_redirect.hpp  watchdog.hpp
App/Src/: app.cpp  app_it.cpp  app_main.cpp  cfg_gpio.cpp  console.cpp  disp_gpio.cpp  ha_ctrl.cpp  hal_adc.cpp  hal_gpio.cpp  hal_uart.cpp  mod_hal_gpio.cpp  uart_redirect.cpp
Boot/: CMakeLists.txt
Boot/Inc/: boot.hpp  boot_flag_manager.hpp
Boot/Src/: boot.cpp  boot_flag_manager.cpp
BootPrim/: CMakeLists.txt  boot_prim_linker.ld
BootPrim/Inc/: boot_prim.hpp
BootPrim/Src/: boot_prim.cpp
BootSec/: CMakeLists.txt  boot_sec_linker.ld
BootSec/Inc/: boot_sec.hpp
BootSec/Src/: boot_sec.cpp
Bootloader/: CMakeLists.txt  boot_FLASH.ld  boot_linker.ld
Bootloader/Inc/: boot.hpp
Bootloader/Src/: boot.cpp
Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: main.c  stm32f4xx_it.c  system_stm32f4xx.c
Doc/: Boot-Architecture.md  Bootloader.md  LogBook.md
Platform/Architecture/: adc_class_diagram.puml  adc_sequence_diagram.puml  clock_class_diagram.puml  clock_sequence_diagram.puml  gpio_class_diagram.puml  gpio_sequence_diagram.puml  watchdog_class_diagram.puml  watchdog_sequence_diagram.puml
Platform/Common/Image/Inc/: image_manager.hpp  shared_memory.hpp
Platform/Common/Image/Src/: image_manager.cpp  shared_memory.cpp
Platform/Common/Integrity/Inc/: crc32_check.hpp
Platform/Common/Integrity/Src/: crc32_check.cpp
Platform/Interface/: api_debug.hpp  pil_gpio.hpp  pil_pin_config.hpp  pin_config.hpp
Platform/Interface/PilAdc/: CMakeLists.txt  pil_adc.hpp
Platform/Interface/PilClock/: CMakeLists.txt  pil_clock_config.hpp
Platform/Interface/PilFlash/: CMakeLists.txt  firmware_metadata.hpp  pil_flash_writer.hpp
Platform/Interface/PilGpio/: CMakeLists.txt  pil_gpio.hpp  pil_pin_config.hpp  pil_pin_id.hpp
Platform/Interface/PilUart/: CMakeLists.txt  pil_uart.hpp
Platform/Interface/PilWatchdog/: CMakeLists.txt  pil_watchdog.hpp
Platform/STM32F4/: CMakeLists.txt
Platform/STM32F4/Inc/: adc_manager_stm32.hpp  adc_stm32.hpp  api_gpio.hpp  clock_boot_prim_stm32.hpp  clock_manager_stm32.hpp  clock_stm32.hpp  crc32_stm32.hpp  flash_layout.hpp  flash_writer_stm32.hpp  gpio_config_stm32.hpp  gpio_hal_stm32.hpp  gpio_manager_stm32.hpp  gpio_pin_stm32.hpp  gpio_stm32.hpp  hal_gpio.hpp  traits_stm32.hpp  uart_id_stm32.hpp  uart_manager_stm32.hpp  uart_receiver_stm32.hpp  uart_stm32.hpp  watchdog_manager_stm32.hpp  watchdog_stm32.hpp
Platform/STM32F4/Src/: adc_manager_stm32.cpp  adc_stm32.cpp  cfg_gpio.cpp  clock_boot_prim_stm32.cpp  clock_manager_stm32.cpp  clock_stm32.cpp  crc32_stm32.cpp  flash_writer_stm32.cpp  gpio_hal_stm32.cpp  gpio_manager_stm32.cpp  gpio_pin_stm32.cpp  gpio_stm32.cpp  hal_adc.cpp  hal_uart.cpp  uart_manager_stm32.cpp  uart_receiver_stm32.cpp  uart_stm32.cpp  watchdog.cpp  watchdog_manager_stm32.cpp  watchdog_stm32.cpp
Src/: main.c
Startup/: startup_stm32f407vgtx.s
Tools/: char_split_in_txt.py  clang-tidy-html.sh  gen_metadata.py  prepare_clean.py  prepare_list.py  serial_send_image.py
cmake/: clang-tidy.cmake  combine_binaries.sh  combine_firmware_update_bin.py  compiler-warnings.cmake  extract_version.sh  gcc-arm-none-eabi.cmake  package_firmware.sh  platform-traits.cmake  project-sources.cmake  size-report.cmake  utilities-check-size.cmake  utilities.cmake  vscode_generated.cmake
tests/: CMakeLists.txt  hal_adc_mock.cpp  test_hal_adc.cpp
